2005-06-09  Dave Beckett  <Dave.Beckett@bristol.ac.uk>

	* configure.ac: raptor min 1.4.4 (same as rasqal) rasqal min
	0.9.10

	* rasqal/: Snapshotted rasqal_0_9_10 for 0.9.10 release

	* rasqal/tests/sparql/ValueTesting/Makefile.am:
	extendedType-eq-pass passes

	* rasqal/rasqal_query.c (rasqal_new_query_result_row): Added
	offset to store original sort order in case it is needed to order
	two identical literals.
	(rasqal_query_result_row_print): Print offset.
	(rasqal_engine_query_results_compare): Renamed from
	rasqal_engine_query_results_sort.  Lots more debug messages and
	checks.  Order NULL literals before other types.
	(rasqal_query_execute): Pass result offset into
	rasqal_new_query_result_row.

	* rasqal/rasqal_literal.c (rasqal_literal_compare): Make
	comparison stable for URIs and datatyped strings - use strcmp on
	string values of URIs.

	* rasqal/tests/sparql/sort/Makefile.am: sort-3 works

	* rasqal/librasqal.3: Updates for 0.9.10

2005-06-08  Dave Beckett  <Dave.Beckett@bristol.ac.uk>

	* rasqal/win32_rasqal_config.h: Undefine OPTIONAL as something in
	win32 defines it.

	* rasqal/sparql_parser.y, rasqal/roqet.c, rasqal/rasqal_query.c,
	rasqal/rasqal_internal.h, rasqal/rasqal_graph_pattern.c,
	rasqal/rasqal_engine.c: Rename rasqal_graph_pattern_operator
	variables called 'operator' to 'op' for C++.  Other casts for C++

	* rasqal/rasqal_internal.h: Added RASQAL_DEPRECATED_WARNING to
	generate a rasqal warning once only.

	* rasqal/sparql_parser.y (OrderCondition): Use
	RASQAL_DEPRECATED_WARNING to explain ASC[] and DESC[] have been
	replaced.

	* rasqal/sparql_parser.y (OrderCondition): Use
	RASQAL_EXPR_ORDER_COND_ASC or DESC not NONE which is deleted.

	* rasqal/rasqal_query.c, rasqal/rasqal_expr.c, rasqal/rasqal.h:
	Deleted RASQAL_EXPR_ORDER_COND_NONE

	* rasqal/rasqal_query.c (rasqal_engine_query_results_sort): If
	result is 0 at the end, use the difference between the object
	pointers to create a stable sort when duplicates occur.
