@@ -8,10 +8,7 @@
 
   <h1>Redland RDF Application Framework - News</h1>
 
-<h2>2005-??-?? Version 1.0.2 Released</h2>
-
-<p>Not yet released.
-</p>
+<h2>2005-06-10 Version 1.0.2 Released</h2>
 
 <p>
 Fixed a crash when querying or searching with the API and getting no results<br />
