@@ -23,10 +23,6 @@ pre
 
 <h2 id="rel1_0_2"><a name="rel1_0_2">Redland 1.0.2 Changes</a></h2>
 
-<p>Not yet released.
-</p>
-
-
 <p>The changes in this release are:</p>
 
 <ul>
